1.2.2b2:
    BI:
    * FIX: fix exception in BI-Boxes views of host groups

    Event Console:
    * FIX: Fixed exception when logging actions exectuted by mkeventd

    Multisite:
    * FIX: Fixed several minor IE7 related layout bugs

1.2.2b1:
    Core:
    * cmk --notify: added notification script to generate HTML mails including
      the performance graphs of hosts and services
    * cmk --notify: added the macros NOTIFY_LASTHOSTSTATECHANGE, NOTIFY_HOSTSTATEID,
      NOTIFY_LASTSERVICESTATECHANGE, NOTIFY_SERVICESTATEID, NOTIFY_NOTIFICATIONCOMMENT,
      NOTIFY_NOTIFICATIONAUTHOR, NOTIFY_NOTIFICATIONAUTHORNAME, NOTIFY_NOTIFICATIONAUTHORALIAS
    * FIX: more robust deletion of precompiled files to ensure the correct 
      creation of the files (Thanks to Guido Günther)
    * FIX: Inventory for cluster nodes who are part of multiple clusters 
    * cmk --notify: added plugin for sms notification
    * FIX: precompiled checks: correct handling of sys.exit() call when using python2.4 
    * cmk --notify: improved logging on wrong notification type
    * RPM: Added check_mk-agent-scriptless package (Same as normal agent rpm,
      but without RPM post scripts)

    Checks & Agents:
    * winperf_processor now outputs float usage instead of integer
    * FIX: mssql_counters.file_sizes - Fixed wrong value for "Log Files" in output
    * FIX: drbd: Parameters for expected roles and disk states can now be set to 
           None to disable alerting on changed values
    * printer_supply_ricoh: New check for Ricoh printer supply levels
    * jolokia_metrics.mem: now supports warn/crit levels for heap, nonheap, totalheap
    * jolokia_metrics.mem: add dedicated PNP graph
    * FIX: logwatch.ec: use UNIX socket instead of Pipe for forwarding into EC 
    * FIX: logwatch.ec: fixed exception when forwarding "OK" lines
    * FIX: logwatch.ec: fixed forwarding of single log lines to event console
    * Improved performance of logwatch.ec check in case of many messages